[package]
name = "yogi"
version = "0.1.0"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stip"
path = "src/bin/stip.rs"

[[bin]]
name = "stitchd"
path = "src/bin/stitchd.rs"

[dependencies]
byteorder = "1"
crossbeam-channel = "0.4"
protobuf = { path = "../../../stip/impl/protobuf" }
st-image = { path = "../../../st-image" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.1"
